[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valheim-mod-manager"
version = "2.0.0"
description = "Gestionnaire de mods GTK4 pour Valheim via Thunderstore.io"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42.0",
]
authors = [
    {name = "Majojo"},
]
license = {text = "MIT"}

[project.scripts]
valheim-mod-manager = "vmm.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vmm*"]
