[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valheim-mod-manager"
version = "1.0.0"
description = "GTK4 mod manager for Valheim via Thunderstore.io"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42.0",
]
authors = [
    {name = "Majojo"},
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
valheim-mod-manager = "vmm.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vmm*"]

[tool.setuptools.package-data]
vmm = ["fonts/*.ttf", "icons/**/*.png"]
